# mr-cpp

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  data.json  json  main.cpp  main.h  map.json  reduce.json  slave1.json  slave2.json  task.json
lib/confreader/: confreader.cpp  confreader.h
lib/file_write/: CMakeLists.txt  file_write.cpp  file_write.h
lib/json/: CMakeLists.txt  json.cpp  json.h
lib/logging/: CMakeLists.txt  logging.cpp  logging.h
lib/optparse/: CMakeLists.txt  optparse.cpp  optparse.h
lib/read_file/: CMakeLists.txt  read_file.cpp  read_file.h
lib/storage/: CMakeLists.txt  storage.cpp  storage.h
lib/tcpclient/: CMakeLists.txt  tcpclient.cpp  tcpclient.h
lib/tcpserver/: CMakeLists.txt  tcpserver.cpp  tcpserver.h
master/: CMakeLists.txt  main.cpp  main.h  master.conf  master.cpp  master.h  watcher.cpp  watcher.h
slave/: CMakeLists.txt  main.cpp  main.h  slave.conf
test/: CMakeLists.txt  pre_map.cpp  pre_map.h  slave3.json  task.json  test.sh
