project(client CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(OPTPARSE ../lib/optparse/optparse.cpp)
#set(TCPCLIENT ../lib/tcpclient/tcpclient.cpp)
set(READ_FILE ../lib/read_file/read_file.cpp)
add_library(optparse ${OPTPARSE})
#add_library(tcpclient ${TCPCLIENT})
add_library(read_file ${READ_FILE})
set(SOURCE_FILES_CLIENT main.cpp main.h)
add_executable(client ${SOURCE_FILES_CLIENT})
target_link_libraries(client optparse tcpclient read_file json ${Boost_LIBRARIES})
