project(test CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#set(READ_FILE ../lib/read_file/read_file.cpp)
#add_library(read_file ${READ_FILE})
set(SOURCE_FILES_PRE_MAP pre_map.cpp pre_map.h)
add_executable(pre_map ${SOURCE_FILES_PRE_MAP})
target_link_libraries(pre_map read_file ${Boost_LIBRARIES})
